--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -49,9 +49,8 @@
     
     <div class="container">
         <header>
-            <h1>Cart</h1>
             <div class="shopping">
-                <img src="image/shopping.svg">
+                <img src="image/shopping-cart.png">
                 <span class="quantity">0</span>
             </div>
         </header>
